Main page: fixed bug with wrong width of left navbar elements.

--- a/assets/css/pc/pages/sunglasses.css
+++ b/assets/css/pc/pages/sunglasses.css
@@ -85,7 +85,7 @@
 	}
 	#pageSlidingNavbar .pageSlidingButton {
 		display: inline-block;
-		width: 70px;
+		width: 80px;
 		padding: 5px 5px 5px 5px;
 		border-radius: 55px;
 		margin: 0 0 25px 0;
